isd/oes/templates/ingress/oes-ui-ingress.yaml
---
# Source: oes/templates/ingress/oes-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: oes-ui-ingress
spec:
  rules:
  - host: marchdemo.hyd.opsmx.net
    http:
      paths:
      - backend:
          service:
            name: oes-ui
            port:
              number: 8080
        path: /
        pathType: ImplementationSpecific
